2002-11-20  Maciej Stachowiak  <mjs@apple.com>

        * force-js-clean-timestamp: Work around PB lameness yet again.

2002-11-19  Darin Adler  <darin@apple.com>

        * force-js-clean-timestamp: Make other people's builds work.

2002-11-19  David Hyatt  <hyatt@apple.com>

	I screwed up the line breaking for inline replaced elements.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::calcInlineMinMaxWidth):

2002-11-19  Darin Adler  <darin@apple.com>

	- another atomic identifier scrub pass; make the conversion to Identifier explicit

        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLCollection::tryCall): Add explicit Identifier() conversion.
        (KJS::HTMLCollectionProtoFunc::tryCall): Ditto.
        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): And again.

2002-11-19  David Hyatt  <hyatt@apple.com>

	Fix for 3049663.  Table cells don't grow to accommodate block
	overflow.
	
        * khtml/rendering/bidi.cpp:
        (RenderFlow::layoutInlineChildren):
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::RenderFlow):
        (RenderFlow::layout):
        (RenderFlow::layoutBlockChildren):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_object.h:

2002-11-19  Darin Adler  <darin@apple.com>

	- next step towards atomic identifiers; Identifier is no longer derived from UString

        * khtml/ecma/kjs_binding.cpp:
        (Identifier::string): Added.
        (Identifier::qstring): Added.

        * khtml/ecma/kjs_binding.h:
        * khtml/ecma/kjs_css.cpp:
        (jsNameToProp):
        (DOMCSSStyleDeclaration::tryPut):
        (DOMStyleSheet::tryPut):
        (DOMStyleSheetList::tryGet):
        (DOMMediaList::tryGet):
        (DOMCSSRuleList::tryGet):
        (DOMCSSValueList::tryGet):
        * khtml/ecma/kjs_dom.cpp:
        (DOMNodeList::hasProperty):
        (DOMNodeList::tryGet):
        (DOMNodeListFunc::DOMNodeListFunc):
        (DOMElement::tryGet):